// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToolCallGroup > renders error state with x 1`] = `
<div>
  <div
    class="my-2 rounded-md border border-border bg-card overflow-hidden"
    data-status="error"
    data-testid="tool-call-group"
    data-tool="bash"
  >
    <div
      class="flex items-center gap-2 px-3 py-2 text-sm"
    >
      <svg
        class="lucide lucide-terminal size-4 text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="4 17 10 11 4 5"
        />
        <line
          x1="12"
          x2="20"
          y1="19"
          y2="19"
        />
      </svg>
      <span
        class="font-medium"
      >
        Shell
      </span>
      <span
        class="text-muted-foreground truncate flex-1"
      >
        ls -la
      </span>
      <svg
        class="lucide lucide-x size-4 text-red-600"
        data-testid="status-error"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
      <span
        class="text-xs text-muted-foreground tabular-nums"
      >
        400ms
      </span>
    </div>
    <details
      class="border-t border-border"
    >
      <summary
        class="px-3 py-1.5 text-xs text-muted-foreground cursor-pointer select-none"
      >
        Args
      </summary>
      <pre
        class="px-3 py-2 text-xs bg-secondary overflow-x-auto whitespace-pre-wrap"
      >
        {"command":"ls -la"}
      </pre>
    </details>
    <details
      class="border-t border-border"
    >
      <summary
        class="px-3 py-1.5 text-xs text-muted-foreground cursor-pointer select-none"
      >
        Output
      </summary>
      <pre
        class="px-3 py-2 text-xs overflow-x-auto whitespace-pre-wrap bg-red-50 dark:bg-red-950/30"
      >
        exit 1
      </pre>
    </details>
  </div>
</div>
`;

exports[`ToolCallGroup > renders ok state with check and duration 1`] = `
<div>
  <div
    class="my-2 rounded-md border border-border bg-card overflow-hidden"
    data-status="ok"
    data-testid="tool-call-group"
    data-tool="bash"
  >
    <div
      class="flex items-center gap-2 px-3 py-2 text-sm"
    >
      <svg
        class="lucide lucide-terminal size-4 text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="4 17 10 11 4 5"
        />
        <line
          x1="12"
          x2="20"
          y1="19"
          y2="19"
        />
      </svg>
      <span
        class="font-medium"
      >
        Shell
      </span>
      <span
        class="text-muted-foreground truncate flex-1"
      >
        ls -la
      </span>
      <svg
        class="lucide lucide-check size-4 text-green-600"
        data-testid="status-ok"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
      <span
        class="text-xs text-muted-foreground tabular-nums"
      >
        400ms
      </span>
    </div>
    <details
      class="border-t border-border"
    >
      <summary
        class="px-3 py-1.5 text-xs text-muted-foreground cursor-pointer select-none"
      >
        Args
      </summary>
      <pre
        class="px-3 py-2 text-xs bg-secondary overflow-x-auto whitespace-pre-wrap"
      >
        {"command":"ls -la"}
      </pre>
    </details>
    <details
      class="border-t border-border"
    >
      <summary
        class="px-3 py-1.5 text-xs text-muted-foreground cursor-pointer select-none"
      >
        Output
      </summary>
      <pre
        class="px-3 py-2 text-xs overflow-x-auto whitespace-pre-wrap bg-secondary"
      >
        a.txt
      </pre>
    </details>
  </div>
</div>
`;

exports[`ToolCallGroup > renders running state with spinner 1`] = `
<div>
  <div
    class="my-2 rounded-md border border-border bg-card overflow-hidden"
    data-status="running"
    data-testid="tool-call-group"
    data-tool="bash"
  >
    <div
      class="flex items-center gap-2 px-3 py-2 text-sm"
    >
      <svg
        class="lucide lucide-terminal size-4 text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="4 17 10 11 4 5"
        />
        <line
          x1="12"
          x2="20"
          y1="19"
          y2="19"
        />
      </svg>
      <span
        class="font-medium"
      >
        Shell
      </span>
      <span
        class="text-muted-foreground truncate flex-1"
      >
        ls -la
      </span>
      <svg
        class="lucide lucide-loader-circle size-4 animate-spin text-muted-foreground"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12a9 9 0 1 1-6.219-8.56"
        />
      </svg>
      <span
        class="text-xs text-muted-foreground tabular-nums"
      >
        400ms
      </span>
    </div>
    <details
      class="border-t border-border"
    >
      <summary
        class="px-3 py-1.5 text-xs text-muted-foreground cursor-pointer select-none"
      >
        Args
      </summary>
      <pre
        class="px-3 py-2 text-xs bg-secondary overflow-x-auto whitespace-pre-wrap"
      >
        {"command":"ls -la"}
      </pre>
    </details>
  </div>
</div>
`;
